# picotest

./: AUTHORS  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: auto_dependabot.yml  build-and-test.yml  release.yml
picotest/: Cargo.toml
picotest/src/: internal.rs  lib.rs
picotest/src/runner/: client.rs  mod.rs  server.rs
picotest/tests/: helpers.rs  run.rs  test_integration.rs  test_integration_inside_plugin.rs  test_pgproto.rs  test_unit.rs
picotest/tests/assets/: picotest_macro_tests.rs  picotest_unit_macro_tests.rs
picotest/tests/resources/: test_plugin_config.yaml
picotest_helpers/: Cargo.toml  README.md
picotest_helpers/src/: lib.rs  migration.rs  topology.rs
picotest_helpers/src/tests/: mod.rs
picotest_helpers/src/tests/resources/test_custom_plugin_config/: input_manifest.yaml  output_manifest.yaml  plugin_config.yaml
picotest_macros/: Cargo.toml  README.md
picotest_macros/src/: lib.rs  utils.rs
