[workspace]
resolver = "2"
members = [
    "picotest", 
    "picotest_macros", 
    "picotest_helpers", 
]

exclude = [
    "tmp/test_plugin"
]

[workspace.dependencies]
anyhow = { version = "1.0.100" }
picodata-pike = { version = "3.0.0" }
rstest = { version = "0.26.1"}
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { version = "0.9.34-deprecated" }
rmp-serde = { version = "1.3.1" }
