[workspace]
resolver = "2"
members = [
    "picotest", 
    "picotest_macros", 
    "picotest_helpers", 
]

exclude = [
    "tmp/test_plugin"
]

[workspace.dependencies]
anyhow = { version = "1.0.102" }
picodata-pike = { version = "^5.3.1" }
rstest = { version = "0.26.1"}
serde = { version = "1.0.228", features = ["derive"] }
serde_norway = { version = "0.9" }
rmp-serde = { version = "^1.1" }
env_logger = "0.11.10"