[package]
name = "picotest"
version = "1.2.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Test framework for Picodata plugin"
homepage = "https://picodata.io/"
repository = "https://github.com/picodata/picotest"
documentation = "https://github.com/picodata/picotest"
keywords = ["picodata", "test"]
categories = ["development-tools::testing"]
readme = "README.md"
authors = [
    "Alexandr Sorokin <a.sorokin@picodata.io>",
    "Boris Sinyapkin <b.sinyapkin@picodata.io>",
    "Evgeniy Mitin <e.mitin@picodata.io>"
]


[dependencies]
picotest_macros = { path = "../picotest_macros", version = "1.1.0" }
picotest_helpers = { path = "../picotest_helpers", version = "1.1.0" }
anyhow = "1.0.98"
ctor = "0.4.1"
rstest = "0.25.0"

[dev-dependencies]
wait-timeout = "0.2.1"
uuid = { version = "1.16.0", features = ["v4"] }
constcat = "0.6.0"
serde_yaml = "0.9.34"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
