[package]
name = "picotest"
version = "1.7.2"
edition = "2021"
license = "BSD-2-Clause"
description = "Test framework for Picodata plugin"
homepage = "https://picodata.io/"
repository = "https://github.com/picodata/picotest"
documentation = "https://github.com/picodata/picotest"
keywords = ["picodata", "test"]
categories = ["development-tools::testing"]
readme = "README.md"
authors = [
    "Alexandr Sorokin <a.sorokin@picodata.io>",
    "Boris Sinyapkin <b.sinyapkin@picodata.io>",
    "Evgeniy Mitin <e.mitin@picodata.io>",
    "Alexander Morozov <a.morozov@picodata.io>"
]


[dependencies]
picotest_macros = { path = "../picotest_macros", version = "1.7.2" }
picotest_helpers = { path = "../picotest_helpers", version = "1.7.2" }
anyhow.workspace = true
ctor = "0.4.2"
rstest.workspace = true
serde.workspace = true


[dev-dependencies]
serde.workspace = true
rmp-serde.workspace = true
tokio = "1.47.1"
wait-timeout = "0.2.1"
uuid = { version = "1.18.0", features = ["v4"] }
constcat = "0.6.1"
serde_yaml = "0.9.34"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
