[package]
name = "picotest_helpers"
version = "1.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Test framework for Picodata plugin"
homepage = "https://picodata.io/"
repository = "https://github.com/picodata/picotest"
documentation = "https://github.com/picodata/picotest"
keywords = ["picodata", "test"]
categories = ["development-tools::testing"]
readme = "README.md"
authors = [
    "Alexandr Sorokin <a.sorokin@picodata.io>",
    "Boris Sinyapkin <b.sinyapkin@picodata.io>",
    "Evgeniy Mitin <e.mitin@picodata.io>"
]


[dependencies]
log = "0.4.27"
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4"] }
picodata-pike = { version = "2.3.1"}
anyhow = "1.0.98"
toml = "0.8.20"
