[package]
name = "picotest_helpers"
version = "1.8.1"
edition = "2021"
license = "BSD-2-Clause"
description = "Test framework for Picodata plugin"
homepage = "https://picodata.io/"
repository = "https://github.com/picodata/picotest"
documentation = "https://github.com/picodata/picotest"
keywords = ["picodata", "test"]
categories = ["development-tools::testing"]
readme = "README.md"
authors = [
    "Alexandr Sorokin <a.sorokin@picodata.io>",
    "Boris Sinyapkin <b.sinyapkin@picodata.io>",
    "Evgeniy Mitin <e.mitin@picodata.io>",
    "Alexander Morozov <a.morozov@picodata.io>"
]


[dependencies]
log = "0.4.29"
rand = "0.10.0"
uuid = { version = "1.20.0", features = ["v4"] }
picodata-pike.workspace = true
anyhow.workspace = true
toml = "0.9.11"
rmpv = "1.3.1"
rusty_tarantool = "0.3.0"
bytes = { version = "1.11.0", features = ["serde"] }
serde.workspace = true
rmp-serde.workspace = true

[dev-dependencies]
rstest.workspace = true
