[package]
name = "picotest_macros"
version = "1.2.1"
edition = "2021"
license = "BSD-2-Clause"
description = "Test framework for Picodata plugin"
homepage = "https://picodata.io/"
repository = "https://github.com/picodata/picotest"
documentation = "https://github.com/picodata/picotest"
keywords = ["picodata", "test"]
categories = ["development-tools::testing"]
readme = "README.md"
authors = [
    "Alexandr Sorokin <a.sorokin@picodata.io>",
    "Boris Sinyapkin <b.sinyapkin@picodata.io>",
    "Evgeniy Mitin <e.mitin@picodata.io>"
]

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
rstest = "0.25.0"
darling = "0.20.11"

[lib]
proc-macro = true
