[package]
name = "picotest_macros"
version = "1.8.1"
edition = "2021"
license = "BSD-2-Clause"
description = "Test framework for Picodata plugin"
homepage = "https://picodata.io/"
repository = "https://github.com/picodata/picotest"
documentation = "https://github.com/picodata/picotest"
keywords = ["picodata", "test"]
categories = ["development-tools::testing"]
readme = "README.md"
authors = [
    "Alexandr Sorokin <a.sorokin@picodata.io>",
    "Boris Sinyapkin <b.sinyapkin@picodata.io>",
    "Evgeniy Mitin <e.mitin@picodata.io>",
    "Alexander Morozov <a.morozov@picodata.io>"
]

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }
rstest.workspace = true
darling = "0.21.3"

[lib]
proc-macro = true
